WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86196
Web Inspector: Search box doesn't allow CSS selectors anymore
https://bugs.webkit.org/show_bug.cgi?id=86196
Summary
Web Inspector: Search box doesn't allow CSS selectors anymore
Alexander Pavlov (apavlov)
Reported
2012-05-11 04:58:02 PDT
What steps will reproduce the problem? 1. Open the Chrome Developer Tools (F12) 2. Click on the search box (Ctrl+F) 3. Type a valid CSS selector present in the current DOM e.g. ".classname", "div + div", ".classname:last-child". What is the expected result? Results are displayed next to the search box, e.g. "1 of 38 matches" and every element that matches the selector is highlighted in the Elements view. What happens instead? No elements are found ("Not Found" is displayed). Please provide any additional information below. Attach a screenshot if possible. UserAgentString: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.168 Safari/535.19 This feature used to work in Chrome a few versions back. It still works in Safari 5.1.5 (OS X). Upstreaming
http://code.google.com/p/chromium/issues/detail?id=127440
Attachments
Patch
(2.11 KB, patch)
2012-05-11 05:18 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(4.48 KB, patch)
2012-05-11 05:40 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(4.37 KB, patch)
2012-05-11 05:43 PDT
,
Alexander Pavlov (apavlov)
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-05-11 04:58:26 PDT
This is a regression from
http://trac.webkit.org/changeset/99983
Alexander Pavlov (apavlov)
Comment 2
2012-05-11 05:18:23 PDT
Created
attachment 141381
[details]
Patch
Alexander Pavlov (apavlov)
Comment 3
2012-05-11 05:40:39 PDT
Created
attachment 141385
[details]
Patch
Pavel Feldman
Comment 4
2012-05-11 05:42:04 PDT
Comment on
attachment 141381
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141381&action=review
A test please!
> Source/WebCore/inspector/InspectorDOMAgent.cpp:899 > + if (node->nodeType() == Node::ELEMENT_NODE)
Why this check?
Alexander Pavlov (apavlov)
Comment 5
2012-05-11 05:43:55 PDT
Created
attachment 141387
[details]
Patch
Alexander Pavlov (apavlov)
Comment 6
2012-05-11 05:47:12 PDT
Committed
r116755
: <
http://trac.webkit.org/changeset/116755
>
Pavel Feldman
Comment 7
2012-07-19 00:29:08 PDT
***
Bug 91713
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug