Web Inspector: Search box doesn't allow CSS selectors anymore https://bugs.webkit.org/show_bug.cgi?id=86196

Reviewed by Pavel Feldman.

Source/WebCore:

Refactoring in http://trac.webkit.org/changeset/99983 inadvertently removed the selector matching during
node search in the InspectorDOMAgent. This change re-introduces the Document::querySelectorAll() evaluation
for the user query.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::performSearch):

LayoutTests:

* inspector/elements/elements-panel-search-expected.txt:
* inspector/elements/elements-panel-search.html:

Canonical link: https://commits.webkit.org/103789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116755 268f45cc-cd09-0410-ab3c-d52691b4dbfc